fixed background image and aligned buttons on book.handlebar with color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 /* Backround image */
 .box {
   background-image: url(backround.jpeg);
-  height: 200vh;
   background-position: center;
   background-size: cover;
 }
